# ecc

./: .travis.yml  CMakeLists.txt  README.md  exemplo.c  perceptron.c  sonar-project.properties  sonar-project.properties.txt
Exemplos/CMake - Basic/: CMakeLists.txt
Exemplos/CMake - Configure/: CMakeLists.txt
Exemplos/CMake - Configure/config/: sistema.c  sistema.cmake  sistema.h.in
Exemplos/CMake - Install - Use/: CMakeLists.txt  perceptron.c
Exemplos/CMake - Library/: CMakeLists.txt  README.md  runAbb.bat
Exemplos/CMake - Library/lib/: abb.h
Exemplos/CMake - Library/src/: CMakeLists.txt  message.cmake
Exemplos/CMake - Subdirectory/: CMakeLists.txt  README.md
Exemplos/CMake - Subdirectory/src/: CMakeLists.txt
Exemplos/CMake - Tests/: CMakeLists.txt  README.md
Exemplos/CMake - Tests/tests/: CMakeLists.txt  tests.h
Exemplos/CMake-Install-Use/: README.md
Exemplos/CMake-Install-Use/example/: CMakeLists.txt
Exemplos/CMake-Library/src/: abb.c  main.c
Exemplos/CMake-Subdirectory/src/: main.c
Exemplos/CMake-Tests/tests/: cmockatest.c
Exemplos/CMake/CMake-Basic/: README.md
Exemplos/CMake/CMake-Configure/: README.md
Exemplos/CMake/CMake-Configure/config/: CMakeLists.txt
Exemplos/CMake/CMake-Install-Use/: main.c  perceptron.h
Exemplos/CMake/CMake-Library/: README.md
Exemplos/CMake/CMake-Tests/: CMakeLists.txt  README.md
Exemplos/CMake/CMake-Tests/tests/: main.c
Exemplos/Travis/: README.md  Travis-CMake-Basic
Exemplos/Travis/Travis-Basic/: .travis.yml  README.md  main.c
Exemplos/Travis/Travis-CMake-Basic/: README.md
Exemplos/Travis/Travis-CMake-Install/: .travis.yml  README.md
Exemplos/Travis/Travis-SonarCloud/: .travis.yml  README.md
Exemplos/Travis/Travis-SonarCloud/SonarCloud-Script/: README.md  sonar-project.properties
Exemplos/Travis/Travis-Stages/: README.md
Exemplos/Travis/Travis-Tests/: .travis.yml  README.md
